src/App.css
.root {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  min-height: 100vh;
  overflow: hidden;
  background-image: linear-gradient(rgba(25, 23, 24, 0.2) 33%, rgb(25, 23, 24) 67%);
  opacity: 1;
}
.backgroundImage {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 1; /* Adjust the opacity as needed */
  z-index: -1;
  filter: blur(10px);
    transform: scale(1.6);
}

* {
  user-select: none;
}

.app {
  overflow: hidden;
}

.app > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.row {
  flex-direction: row !important;
}

.row > * {
  margin: 5px;
}

h1 {
  font-family: 'Damion', cursive;
  color: #fff;
  text-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.3);
  
}

h2 {
  color: #fff;
}

.swipe {
  position: absolute;
}

.cardContainer {
  width: 100vw;
  max-width: 260px;
  height: 390px;
  margin: 16px 24px 24px;
}

.card {
  position: relative;
  background-color: #fff;
  width: 80vw;
  max-width: 260px;
  height: 0;
  padding-top: 150%; /* Set the aspect ratio for the card */
  border-radius: 8px;
  
  background-size: cover;
  background-position: center;
}
.card.current {
  box-shadow: 0 1px 2px rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
}

.cardContent {
  width: 100%;
  height: 100%;
}

.swipe:last-of-type {

}

.card h3 {
  position: absolute;
  bottom: 0;
  margin: 10px;
  color: #fff;
}

.movieMeta {
 
  color: #fff;
  margin: 0 24px 20px;
}

.movieMeta a {
 
  color: #fff!important;
    text-decoration: none;
    justify-content: center;
    display: flex;
    
  
}

.movieTitle {
  font-size: 20px;
  height: 24px;
  line-height: 24px;
  text-align: center;
    font-weight: 500;

}
.movieInfo{
  font-size: 12px;
  height: 20px;
  letter-spacing: .3px;
  line-height: 20px;
  
  text-align: center;
  

}

.movieInfo p{
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0px;
  margin-top: 0.125rem;
}

.imdbContainer {
  margin-top: 1rem;
  display: flex;
  align-items: center;
}



.imdbScore {
  margin-left: 0.5rem;
    
  display: inline-block;
    font-size: 0.625rem;
    line-height: 0.8rem;
    fill: rgb(var(--black) / 1);
    --tw-text-opacity: 1;
    color: #000;
    font-weight: 700;
  display: inline-flex;
  -webkit-box-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  --tw-border-opacity: 1;
  border-color: rgb(230 185 30 / var(--tw-border-opacity));
  --tw-bg-opacity: 1;
  background-color: rgb(230 185 30 / var(--tw-bg-opacity));
  margin-top: auto;
  margin-bottom: auto;
  min-width: 1.5rem;
  border-width: 1px;
  padding: 0.125rem 0.125rem;

}


.infoText {
  width: 100%;
  justify-content: center;
  display: flex;
  color: #fff;
  animation-name: popup;
  animation-duration: 800ms;
  display: none;
}

.buttons {
  margin-bottom: 32px;
  display: flex;
  flex-wrap: wrap;
  
}



.buttons button {
  height: 48px;
    margin: 0 16px 8px;
    width: 48px;
  flex-shrink: 0;
  align-items: center;
   
    border-radius: 50%;
   
    display: flex;
    justify-content: center;
  
  border: none;
  color: #9198e5;
  
  background-color: #fff;
  transition: 200ms;
  
  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
}

.buttons button:hover {
  transform: scale(1.05);
  background-color: #fff;
}


.Mui-disabled {
  background-color: rgba(255, 255, 255, 0.26)!important;
  
}

@keyframes popup {
  0%   { transform: scale(1, 1); }
  10%  { transform: scale(1.1, 1.1); }
  30%  { transform: scale(0.9, 0.9); }
  50%  { transform: scale(1, 1); }
  57%  { transform: scale(1, 1); }
  64%  { transform: scale(1, 1); }
  100% { transform: scale(1, 1); }
}

